
[global]
command_packages = ./setup/lib/

[metadata]
name = atm
author = Lance Finn Helsten
author_email = lanhel@flyingtitans.com
maintainer = Lance Finn Helsten
maintainer_email = lanhel@flyingtitans.com
url = https://github.com/FlyingTitans/atm
description = __doc__,
long_description = open('README.rst').read(),
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Customer Service
    Operating System :: POSIX
    Programming Language :: Python :: 3.10
    Topic :: Office/Business

[options]
python_requires = >=3.10
package_dir=
    =src
packages=find:
install_requires =
	setuptools_scm

[options.packages.find]
where=src

[options.package_data]
atm = *.yml, &.txt, *.conf, *.template

[options.entry_points]
console_scripts = atm=atm.__main__:main

[options.extras_require]
dev   =
	pre-commit>=1.0
	setup-cfg-fmt>=1.0
lint  =
	black
	pylint>=2.3
	pycodestyle>=2.5
	pydocstyle>=3.0
	mypy>=0.710
	vulture
tests =
	pytest>=4.6
	pytest-cov>=2.7
	pytest-runner>=2.0
	coverage[toml]>=5.0
docs  =
	towncrier>=19.0

[pycodestyle]
count = False
max-line-length = 130
statistics = True

[pydocstyle]
#convention=pep257
#Using pep257 with addition of D202 due to Black
ignore=D202,D203,D212,D213,D214,D215,D404,D405,D406,D407,D408,D409,D410,D411

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True

[mypy-deprecated]
ignore_missing_imports = True

[mypy-tqdm]
ignore_missing_imports = True
